--- a/HTML-TEORIA/Tarea/style.css
+++ b/HTML-TEORIA/Tarea/style.css
@@ -5,13 +5,37 @@ img {
 p.newparagraph{
 clear: both;
 }
+
 .h1 {
     font-family: "Times New Roman", Times, serif;
+    color: rgb(4, 113, 255);
   }
 .h2, h3 {
     font-family: Arial, Helvetica, sans-serif;
+    color: rgb(1, 93, 116);
   }
 .p1{
     font-family:'Courier New', Courier, monospace;
 }
-  
+table, th, td {
+  border-collapse: collapse;
+  border: 2px solid black;
+  padding: 5px;
+  border-spacing: 10px;
+  }
+  tr:nth-child(even) {
+    background-color: rgb(0, 132, 255);
+}
+
+li{
+background-color: orange;
+margin-bottom: 0.8em;
+width: 150px;
+border: 1px solid orange;
+color: black;
+padding: 10px 20px;
+border-spacing: 10px;
+}
+li a:hover {
+    color: rgb(0, 0, 0);
+}
