--- a/HTML-TEORIA/Tarea/style.css
+++ b/HTML-TEORIA/Tarea/style.css
@@ -39,3 +39,7 @@ border-spacing: 10px;
 li a:hover {
     color: rgb(0, 0, 0);
 }
+table tr:hover {
+  color: rgb(0, 0, 0);
+  background-color: aqua;
+}
