--- a/HTML-TEORIA/Proyecto Gym/style.css
+++ b/HTML-TEORIA/Proyecto Gym/style.css
@@ -1,61 +1,215 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Lora:ital,wght@0,400..700;1,400..700&family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&family=Tangerine:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Lora:ital,wght@0,400..700;1,400..700&family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&family=Tangerine:wght@400;700&display=swap');
+@import url('<link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Ga+Maamli&family=Lora:ital,wght@0,400..700;1,400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&family=Tangerine:wght@400;700&display=swap')
+;
+@import url('link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Ga+Maamli&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Lora:ital,wght@0,400..700;1,400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&family=Tangerine:wght@400;700&display=swap');
 
+@media (min-width: 1025px) {
+   
+  }
+  
+  @media (min-width: 480px) and (max-width: 1024px) {
+    
+  }
+  
+  @media (max-width: 479px) {
+   
+  }
 
 :root {
-    --text-color-background-footer: rgb(52, 48, 48);
-    --text-on-dark-background: rgb(255, 255, 255);
-    --contrast-color: #e50084;
-    --light-contrast-color: rgb(250, 233, 244);
-    --body-background-color: rgb(247, 247, 247);
-    --gray-text-color: rgb(158, 157, 171);
+    --color: #e50084;
+    --texto-fondo: white;
+    --contrast-color: red;
+    --loight-contrast-color: red;
+    --body-backround-color: rgb(255, 176, 210);
+    --gray-text-color: red;
     --font-text: 'Lato', sans-serif;
     --font-headers: 'Noto Serif', sans-serif;
+
 }
 
-* {
-    font-family: var(--font-text);
+*{
+    font-family: var(--font-text) ;
 }
+
+
 
 nav {
     display: flex;
     justify-content: space-between;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
 }
 
-.nav-flex {
+    
+
+.nav-flex{
     display: flex;
     gap: 10px;
-    font-family: var(--font-headers);
-    font-weight: bold;
-    padding-top: 10px;
+
 }
 
-p {
-    color: var(--text-color-background-footer);
-    /*font-size 1rem;*/
-}
 nav a {
-    padding-top: 8px;
+    color: var(--color) ;
+        font-style:var(--font-text);
+        font-weight: bold;
+        text-decoration: none;
+        padding-top: 10px;}
+
+nav a:hover {
+    color: black;
 }
-a{
-    color:var(--contrast-color);
-    text-decoration: none;
+
+
+.logo {
+    height: 2.8rem;
+    padding-left: 30px;
+    padding-bottom: 20px;
+
 }
-a:hover{
-color: black;
-}
-.client-hover:hover{
-transition: 0.3s;
-filter: brightness(0);
-}
-.client-hover {
+
+.foto-hover {
     height: 1.8rem;
     padding-top: 3px;
     padding-right: 20px;
 }
-.logo {
-    height: 2.8rem;
-    padding-left: 30px;
-    padding-top: 8px;
+.foto-hover:hover {
+    transition: 0.3s;
+    filter: brightness(0);
+
+}
+
+
+
+header {
+    background: url("main6.jpg");
+    height: 400px;
+    background-position: center;
+    background-size: cover;
+    
+}
+
+header .image-header {
+    height: 400px;
+}
+
+mark {
+    background-color: var(--color);
+    color: white;
+
+}
+
+header .image-header p {
+    font-size: 40px;
+    text-align: center;
+    width: 60%;
+    padding-left: 160px;
+    padding-bottom: auto;
+    padding-top: 140px;
+    font-weight: bold;
+
+
+}
+
+h1 {
+    color: var(--color);
+    font-style: var(--font-headers);
+}
+
+.text-active360 {
+    font-style: var(--font-text);
+}
+
+
+
+  .container {
+    display: flex;
+    width: 100%;
+  }
+  .boxes {
+    background-color: var(--body-backround-color);
+    display: flex;
+    flex-direction: row; 
+    justify-content: center;
+  }
+  .box {
+    text-align: center;
+    margin: 15px;
+    border: 0cap;
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+  .boxes>div {
+    background-color: white;
+    font-size: 16px;
+}
+  .box-image {
+    height: 10rem;
+  }
+.table-image {
+    height: 20em;
+  }
+.table-boxes {
+    display: flex;
+    flex-direction: column; 
+    gap: 20px;
+    margin: 20px;
+  }
+.table-box {
+    display: flex;
+    border-radius: 10px;
+    overflow: hidden;
+}
+.table-image{
+width: 250px;
+height: auto;
+object-fit: cover;
+}
+.low-index {
+    background-color: brown;
+}
+.logo-low {
+    height: 1.8rem;
+    padding-top: 10px;
+    padding-right: 20px;
+}
+.main-post {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    padding: 25px;
+}
+.main-post img {
+    width: 100%;
+    max-width: 900px;
+}
+.post-content {
+    max-width: 900px;
+    text-align: left;
+    padding: 20px;
+}
+.post-content h2 {
+    color: #ff4081;
+}
+.grid-posts {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 20px;
+    padding: 40px;
+}
+.grid-posts article {
+    background: #fff;
+    padding: 15px;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+.grid-posts img {
+    width: 100%;
+    border-radius: 10px;
+}
+.grid-posts h3 {
+    color: #ff4081;
+    font-size: 18px;
+}
+.grid-posts p {
+    font-size: 14px;
+    color: #666;
 }
